--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="UTF-8">
   <title>CodePen - maani&#39;s snake game project </title>
   <link rel="stylesheet" href="./style.css">
-
+  <script src="//cdn.jsdelivr.net/npm/eruda"></script>
+  <script>eruda.init();</script>
 </head>
 <body>
 <!-- partial:index.partial.html -->
